editor-components/download/download9/download9.module.scss
@use "../../../../composer-tools//composer-base-components//base//utitilities/viewports.module.scss" as *;

.container {
  &.has-image {
    padding: 0;
  }

  .page {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    position: relative;
    height: auto;

    &.image {
      min-height: 500px;
    }

    &.no-image {
      min-height: auto;
    }

    .background-image {
      width: 100%;
      object-fit: cover;
      height: 100%;
      position: absolute;
      top: 0;
      left: 0;
      z-index: 1;
    }

    .overlay {
      position: absolute;
      width: 100%;
      height: 100%;
      left: 0;
      top: 0;
      z-index: 1;
      background-color: var(--composer-overlay-color);
    }

    .max-content {
      width: 100vw;
      display: flex;
      overflow: hidden;
      position: relative;
      height: auto;
      min-height: auto;

      &.image {
        align-items: center;
        min-height: 500px;

        .middle-container {
          align-items: center;

          .title,
          .description {
            color: #ffffff;
            text-align: center;
          }

          .subtitle {
            color: #ffffff;
            text-align: center;
            background: transparent !important;
          }
        }

        .hover-container {
          align-items: center;

          .hover-subtitle {
            color: #ffffff;
            text-align: center;
            background: transparent !important;

            &::before {
              display: none;
            }
          }

          .card-title,
          .card-description {
            color: #ffffff;
            text-align: center;
          }
        }

        .card-title,
        .card-description {
          text-align: center;
        }
      }
    }

    .middle-container {
      padding: var(--composer-gap-md) var(--composer-gap-xl);
      z-index: 3;
      width: 100%;
      min-width: 100%;
      min-height: 100%;
      height: auto;
      justify-content: center;
      position: relative;
      bottom: 0;
      opacity: 1;
      transform: translateY(0);
      transition: opacity 0.5s ease 0.2s, transform 0.5s ease 0.3s;

      .subtitle {
        transform: translateX(0);
        align-self: center;

        &::before {
          display: none;
        }
      }

      .title,
      .description {
        text-align: center;
      }
    }

    .hover-container {
      padding: var(--composer-gap-md) var(--composer-gap-xl);
      z-index: 2;
      width: 100vw;
      min-width: 100%;
      min-height: 100%;
      height: auto;
      justify-content: center;
      top: 0;
      opacity: 0;
      transition: opacity 0.5s;
      display: flex;
      flex-direction: column;
      transform: translateX(-100%);
      width: fit-content;

      &.left {
        .hover-subtitle {
          transform: translateX(0);

          &::before {
            display: none;
          }
        }
      }

      align-items: center;
      transition: opacity 0.5s ease;

      .card-title,
      .card-description {
        text-align: center;
      }

      .buttons-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: var(--composer-gap-sm);

        .button-image {
          height: 42px;
          width: 157px;
          border-radius: var(--composer-border-radius-sm);
          object-fit: cover;
        }

        .button {
          .button-icon {
            line-height: 0;
          }

          .button-text {
            content: "";
          }
        }
      }
    }

    &:hover {
      .left-container {
        left: calc(-50% - 200px);
        opacity: 0;
      }

      .right-container {
        transform: translatex(-50vw);
        opacity: 0;
        z-index: 3;
      }

      .middle-container {
        opacity: 0;
        pointer-events: none;
        transform: translateY(var(--composer-gap-xl));
        transition: opacity 0.5s ease 0.2s, transform 0.5s ease 0.2s;
      }

      .hover-container {
        opacity: 1;
        transition: opacity 0.5s ease 0.5s, transform 0.5s ease 0.5s;
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    padding: var(--composer-gap-lg) 0px !important;

    &.has-image {
      padding: 0 !important;
    }

    .page {
      .max-content {
        min-height: auto;

        .middle-container {
          padding: var(--composer-gap-md) var(--composer-gap-lg);
        }

        .hover-container {
          padding: var(--composer-gap-md) var(--composer-gap-lg);

          .buttons-container {
            .button-image {
              height: 40px !important;
              width: 150px !important;
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: var(--composer-gap-md) 0px !important;

    &.has-image {
      padding: 0 !important;
    }

    .page {
      .max-content {
        .middle-container {
          padding: var(--composer-gap-md);
        }

        .hover-container {
          padding: var(--composer-gap-md);

          .buttons-container {
            .button-image {
              height: 28px !important;
              width: 105px !important;
            }
          }
        }
      }
    }
  }
}

